--- a/fornecedor.yml
+++ b/fornecedor.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:mysql://db-fornecedor:3306/fornecedor
-    username: root
+    username: roo
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
