--- a/fornecedor.yml
+++ b/fornecedor.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mysql://db-fornecedor:3306/fornecedor
+#    url: jdbc:mysql://db-fornecedor:3306/fornecedor
+    url: jdbc:mysql://${DATABASE_URL}/fornecedor
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
