--- a/fornecedor-dev.yml
+++ b/fornecedor-dev.yml
@@ -1,7 +1,6 @@
 spring:
   datasource:
-#    url: jdbc:mysql://db-fornecedor:3306/fornecedor
-    url: jdbc:mysql://${DATABASE_URL}/fornecedor
+    url: jdbc:mysql://localhost:3306/fornecedor
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
